app-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: real-track-svc
  namespace: os-stogops-wrk
  labels:

    app.kubernetes.io/name: real-track
    app.kubernetes.io/instance: real-track
    app.kubernetes.io/managed-by: operative
    app.kubernetes.io/component: backend

spec:
  selector:

    app.kubernetes.io/name: real-track
    app.kubernetes.io/instance: real-track
    app.kubernetes.io/managed-by: operative
    app.kubernetes.io/component: backend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
