app-httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: real-track-route
  namespace: os-stogops-wrk
  labels:

    app.kubernetes.io/name: real-track
    app.kubernetes.io/instance: real-track
    app.kubernetes.io/managed-by: operative
    app.kubernetes.io/component: backend

spec:
  parentRefs:
  - name: appgw-stogops-apps
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - "realtrack.stogops.a0.operativeapp.com"
  rules:
  - backendRefs:
    - name: real-track-svc
      port: 80
